--- a/index.html
+++ b/index.html
@@ -1089,14 +1089,14 @@
             </li>
 
 
-            <li class="blog-post-item">
+<!--             <li class="blog-post-item">
               <a href="#">
 
                 <figure class="blog-banner-box">
                   <img src="./ad/one.png" alt="Best fonts every designer" loading="lazy">
                 </figure>
               </a>
-            </li>
+            </li> -->
 
             <li class="blog-post-item">
               <a href="#">
@@ -1109,7 +1109,7 @@
               </a>
             </li>
 
-            <li class="blog-post-item">
+<!--             <li class="blog-post-item">
               <a href="#">
 
                 <figure class="blog-banner-box">
@@ -1118,7 +1118,7 @@
 
 
               </a>
-            </li>
+            </li> -->
 
             <li class="blog-post-item">
               <a href="#">
