--- a/index.html
+++ b/index.html
@@ -616,6 +616,18 @@
 
           <ul class="project-list">
 
+<li class="project-item  active" data-filter-item data-category="site">
+              <video src="./video/view.MP4" controls muted autoplay loop width="270px" loading="lazy">
+            </li>
+
+            <li class="project-item  active" data-filter-item data-category="site">
+                  <video src="./video/overview.MP4" controls muted autoplay loop width="270px" loading="lazy">
+            </li>
+
+            <li class="project-item  active" data-filter-item data-category="site">
+              <video src="./video/one.MP4" controls muted autoplay loop width="270px" loading="lazy">
+        </li>
+
             <li class="project-item  active" data-filter-item data-category="site">
               <a href="#">
 
