--- a/index.html
+++ b/index.html
@@ -617,15 +617,15 @@
           <ul class="project-list">
 
 <li class="project-item  active" data-filter-item data-category="site">
-              <video src="./video/view.MP4" controls muted autoplay loop width="270px" loading="lazy">
+              <video src="./video/view.webm" controls muted autoplay loop width="270px" loading="lazy">
             </li>
 
             <li class="project-item  active" data-filter-item data-category="site">
-                  <video src="./video/overview.MP4" controls muted autoplay loop width="270px" loading="lazy">
+                  <video src="./video/overview.webm" controls muted autoplay loop width="270px" loading="lazy">
             </li>
 
             <li class="project-item  active" data-filter-item data-category="site">
-              <video src="./video/one.MP4" controls muted autoplay loop width="270px" loading="lazy">
+              <video src="./video/one.webm" controls muted autoplay loop width="270px" loading="lazy">
         </li>
 
             <li class="project-item  active" data-filter-item data-category="site">
